# splink

./: Makefile  SplinkDataFrame.html  blocking_rule_composition.html  blocking_rule_library.html  ci.Dockerfile  comparison.html  comparison_helpers.html  comparison_level.html  comparison_level_composition.html  comparison_level_library.html  comparison_library.html  comparison_template_library.html  datasets.html  documentation_index.html  dummy  em_training_session.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  getting_started.html  index.html  linker.html  linkerbloc.html  linkerest.html  linkereval.html  linkerexp.html  linkermodelviz.html  linkerpred.html  pyproject.toml  settings_dict_guide.html  sitemap.xml
.github/: dependabot.yml
docs/demos/: pyproject.toml
docs/demos/dashboards/: .gitignore
docs/demos/examples/duckdb/: accuracy_analysis_from_labels_column.ipynb  accuracy_analysis_from_labels_column.nb.py  deduplicate_50k_synthetic.nb.py  deterministic_dedupe.nb.py  febrl3.nb.py  febrl4.nb.py  link_only.ipynb  link_only.nb.py  pairwise_labels.ipynb  pairwise_labels.nb.py  quick_and_dirty_persons.nb.py  real_time_record_linkage.ipynb  real_time_record_linkage.nb.py  transactions.nb.py
docs/demos/tutorials/: 02_Exploratory_analysis.nb.py  03_Blocking.nb.py  04_Estimating_model_parameters.ipynb  04_Estimating_model_parameters.nb.py  05_Predicting_results.ipynb  05_Predicting_results.nb.py  06_Visualising_predictions.ipynb  06_Visualising_predictions.nb.py  07_Evaluation.ipynb  07_Evaluation.nb.py
(+225 files in other folders)
